--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "plyr-react": "^5.2.0",
     "query-string": "^6.13.8",
     "react": "^17.0.2",
     "react-color": "^2.18.1",
