--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "bizcharts": "^4.1.11",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
+    "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "plyr-react": "^5.2.0",
     "query-string": "^6.13.8",
